--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="navlinks">
                     <ul>
-                        <li><a href="/">ABOUT</a></li>
-                        <li><a href="/">PRICING</a></li>
+                        <li><a href="#packages">PRICING</a></li>
+                        <li><a href="#opening-hours">ABOUT</a></li>
                         <li><a href="#contact">CONTACT US</a></li>
                     </ul>
                 </div>
